@@ -22,11 +22,14 @@ import numble.bankingapi.banking.dto.TransferCommand;
 import numble.bankingapi.banking.exception.InvalidMemberException;
 import numble.bankingapi.member.domain.Member;
 import numble.bankingapi.member.domain.MemberService;
+import numble.bankingapi.social.domain.Friend;
+import numble.bankingapi.social.domain.FriendService;
 
 @Service
 @RequiredArgsConstructor
 public class AccountApplicationService {
 	private final MemberService memberService;
+	private final FriendService friendService;
 	private final AccountService accountService;
 	private final ConcurrencyFacade concurrencyFacade;
 	private final NotifyService notifyService;
@@ -75,27 +78,37 @@ public class AccountApplicationService {
 	}
 
 	public TargetResponses getTargets(String principal, String stringAccountNumber) {
-		AccountNumber accountNumber = new AccountNumber(stringAccountNumber);
-		Account account = accountService.getAccountByAccountNumber(accountNumber);
+		var accountNumber = new AccountNumber(stringAccountNumber);
+		var account = accountService.getAccountByAccountNumber(accountNumber);
 
-		Member member = memberService.findByEmail(principal);
+		var member = memberService.findByEmail(principal);
 		if (!member.getId().equals(account.getUserId())) {
 			throw new InvalidMemberException();
 		}
 
-		return new TargetResponses(accountService.findAll()
-			.stream().map(this::getTargetResponse)
-			.collect(Collectors.toList()));
+		var friendIds = friendService.findFriends(member.getId())
+			.stream()
+			.map(Friend::getToMemberId)
+			.toList();
+
+		var targetList = memberService.findAllById(friendIds);
+		var targetResponseList = accountService.getFriendAccounts(friendIds)
+			.stream()
+			.map(friendAccount -> {
+				Member friend = targetList.stream()
+					.filter(target -> target.getId().equals(friendAccount.getUserId()))
+					.findFirst()
+					.orElseThrow(IllegalArgumentException::new);
+				return new TargetResponse(friend.getName(), friend.getEmail(), friendAccount.getAccountNumber());
+			}).collect(Collectors.toList());
+
+		return new TargetResponses(targetResponseList);
 	}
 
 	private HistoryResponse getHistoryResponse(AccountHistory accountHistory) {
 		return new HistoryResponse(accountHistory.getType(), accountHistory.getMoney(),
 			accountHistory.getFromAccountNumber(), accountHistory.getToAccountNumber(),
 			accountHistory.getCreatedDate());
-	}
-
-	private TargetResponse getTargetResponse(Account account) {
-		return new TargetResponse(account.getAccountNumber());
 	}
 
 	private AccountNumber getAccountNumber(String accountNumber) {
